--- a/src/app/pages/dogadaji/dogadaji.component.html
+++ b/src/app/pages/dogadaji/dogadaji.component.html
@@ -10,7 +10,7 @@
 <!-- Forma za dodavanje događaja -->
 <div *ngIf="showForm && isAdmin" class="event-form">
   <div>
-    <label>Naslov radionice</label>
+    <label>Naslov događaja</label>
     <input [(ngModel)]="formData.naslov" type="text" />
   </div>
 
