added the blog tab,finished the events and added event details page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,6 +11,7 @@
       <li><a routerLink="/dogadaji" (click)="closeMenu()">DOGAĐAJI</a></li>
       <li><a routerLink="/galerija" (click)="closeMenu()">GALERIJA</a></li>
       <li><a routerLink="/onama" (click)="closeMenu()">O NAMA</a></li>
+       <li><a routerLink="/blog" (click)="closeMenu()">BLOG</a></li>
       <li><a routerLink="/kontakt" (click)="closeMenu()">KONTAKT</a></li>
 
       <!-- Ako je korisnik prijavljen -->
